Fixed: Zalgo text issues

--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,10 @@
     <meta name="theme-color" content="#2c2180" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Connect With People"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta property="og:image" content="https://camo.githubusercontent.com/d2734c2db0b6f9508ced2ac385b821c8225ad08e21693a580b3d6e5b738a12d8/68747470733a2f2f692e6962622e636f2f475272677053572f6c617267652d6a6574636861742e706e67"/> 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>JetChat</title>
   </head>
